# rag-bench

./: .cirun.yml  .gitignore  MANIFEST.in  Makefile  README.md  RELEASE.md  bench.py  bench_many.py  pyproject.toml  pytest.ini  run.py
.github/workflows/: _coveralls.yml  _gpu.yml  _lint-type-check.yml  _unit_offline.yml  ci.yml  gpu.yml  lint-type-check.yml  live-cloud.yml  publish-testpypi.yml  publish.yml  release-test.yml
docker/: gpu-tests.Dockerfile
docs/: gcp-gpu-runner.md
rag_bench/: __init__.py  bench_cli.py  bench_many_cli.py  cli.py  config.py
rag_bench/eval/: dataset_loader.py  metrics.py  report.py
rag_bench/pipelines/: hyde.py  multi_query.py  naive_rag.py  rerank.py
rag_bench/providers/: base.py
rag_bench/providers/aws/: auth.py  chat.py  embeddings.py
rag_bench/providers/azure/: auth.py  chat.py  (+1 more)
rag_bench/utils/: cache.py  repro.py  resources.py
rag_bench/vector/: azure_ai_search.py  base.py  matching_engine.py  opensearch.py
recipe/: meta.yaml
scripts/docker/: build_gpu_test_image.sh  run_gpu_tests.sh
scripts/gcp/: build_gpu_base_image.sh  install_gpu_host.sh
src/rag_bench/: __init__.py  bench_cli.py  bench_many_cli.py  cli.py  config.py
tests/: test_basic.py  test_bench_cli.py  test_bench_many_cli.py  test_cache.py  test_cli_main.py  test_cli_offline_branch.py  test_config_validation.py  test_dataset_loader.py  test_datasets_and_hyde.py  test_hardware.py  test_imports.py  test_metrics_basic.py  test_multi_query.py  test_package_public_api.py  test_pipeline_selector.py  test_pipelines_builders.py  test_pipelines_utils.py  test_providers_adapters.py  test_providers_auth.py  test_providers_detect.py  test_report.py  test_repro.py  test_rerank.py  test_usage_tracker.py  test_utils_factories.py  test_utils_factories_and_torch.py  test_vector_base.py  test_vector_local.py
tests/cloud/: test_aws_bedrock_smoke.py  test_azure_openai_smoke.py  test_gcp_vertex_smoke.py
tests/gpu/: test_cuda_sanity.py  test_package_init.py  test_torch_integration.py  test_torch_utils.py
(+36 files in other folders)
