
[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-bench"
dynamic = ["version"]
description = "Reproducible RAG baselines and evaluations with LangChain"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"                         # e.g. "Apache-2.0", "BSD-3-Clause", or a compound expression
license-files = ["LICENSE"]
authors = [{name = "Mikael Twengström"}]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-huggingface >= 0.1.0",
  "sentence-transformers>=2.2.2",
  "faiss-cpu>=1.7.4",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=24.4.0", "isort>=5.13.0", "flake8>=7.3.0", "flake8-pyproject>=1.2.3", "build", "twine"]
gcp = ["langchain-google-vertexai>=0.1.0", "google-auth>=2.30.0"]
aws = ["langchain-aws>=0.1.0", "boto3>=1.34.0", "botocore>=1.34.0", "opensearch-py>=2.6.0"]
azure = ["langchain-openai>=0.1.0", "azure-identity>=1.17.0", "azure-search-documents>=11.5.1"]
providers = ["rag-bench[gcp,aws,azure]"]

[tool.black]
line-length = 120
extend-exclude = '\.ipynb$'

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.flake8]
max-line-length = "120"
extend-ignore = "E203,W503"
extend-exclude = ".venv,venv,**/.venv,**/venv,build,dist,.git,__pycache__"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_bench*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
# version_scheme = "post-release"
# local_scheme = "node-and-date"